<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">


    <Button

        android:id="@+id/btnGish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/btn_rounded"
        android:gravity="center"
        android:padding="2dip"
        android:text="@string/pick_a_quote"
        android:textColor="#FFF" />

    <Button

        android:id="@+id/btnNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/btn_rounded"
        android:gravity="center"
        android:padding="2dip"
        android:text="@string/btn_Notes"
        android:textColor="#FFF" />

    <Button

        android:id="@+id/btnCalendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/btn_rounded"
        android:gravity="center"
        android:padding="2dip"
        android:text="@string/btn_Calendar"
        android:textColor="#FFF" />

    <Button

        android:id="@+id/btnProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/btn_rounded"
        android:gravity="center"
        android:padding="2dip"
        android:text="@string/btn_Main_List"
        android:textColor="#FFF" />

    <Button

    android:id="@+id/btnProductList"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp"
    android:background="@drawable/btn_rounded"
    android:gravity="center"
    android:padding="2dip"
    android:text="@string/btn_My_Items"
    android:textColor="#FFF" />

    <Button

        android:id="@+id/btnTeammates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/btn_rounded"
        android:gravity="center"
        android:padding="2dip"
        android:text="@string/btn_Teammates"
        android:textColor="#FFF" />




</LinearLayout>